--- a/intel-npu-openvino/docker/Dockerfile.openvino
+++ b/intel-npu-openvino/docker/Dockerfile.openvino
@@ -26,4 +26,4 @@ RUN /bin/bash -c "source /opt/intel/openvino_2024.2.0/setupvars.sh && \
 RUN apt install --no-install-recommends -q -y \
     libgl1-mesa-glx \
     git && \
-    python3 -m pip install requests opencv-python seaborn onnx Pillow pandas scikit-learn torch PyYAML>=5.3.1 tqdm matplotlib>=3.4
+    python3 -m pip install requests opencv-python seaborn onnx Pillow pandas scikit-learn torch PyYAML>=5.3.1 tqdm matplotlib>=3.4 efficientnet_pytorch
